# mfstock

./: .gitignore  README.md  pyproject.toml
configs/: backtest_config.yaml.example  project_config.yaml.example  training_config.yaml.example
src/mfstock/backtest/: __init__.py  backtest.py
src/mfstock/dataset/: __init__.py  dataloader.py  dataset.py  processor.py  rolling_window.py  utils.py
src/mfstock/models/: __init__.py  architecture.py  engine.py  saver.py
src/mfstock/run/: run_backtest.py  run_train.py
src/mfstock/utils/: __init__.py  format_display.py  misc.py
test/: debug_nan_loss.py  test_dataloader_performance.py  test_dataset.py  test_models.py  test_pipeline_performance.py
